# docFlow

./: README.md  docflow_memory.db  main.py  pyproject.toml
Sample Inputs/: Email.txt  Json.txt
